--- a/final/17game.plist
+++ b/final/17game.plist
@@ -23,7 +23,7 @@
 					
    <key>url</key>
 					
-   <string>http://wap.78le.cn/DownLoad/phone/ios/xkqp.ipa</string>
+   <string>http://s1.17-game.com:884/DownLoad/phone/ios/17game.ipa</string>
 				
 </dict>
 				
@@ -35,7 +35,7 @@
 					
    <key>url</key>
 					
-   <string>http://wap.78le.cn/DownLoad/phone/ios/displayImage_78.png</string>
+   <string>http://s1.17-game.com:884/DownLoad/phone/ios/displayImage_17.png</string>
 				
 </dict>
 				
@@ -47,7 +47,7 @@
 					
    <key>url</key>
 					
-   <string>http://wap.78le.cn/DownLoad/phone/ios/displayImage_78le.png</string>
+   <string>http://s1.17-game.com:884/DownLoad/phone/ios/displayImage_17game.png</string>
 				
 </dict>
 			
@@ -59,7 +59,7 @@
 				
    <key>bundle-identifier</key>
 				
-   <string>com.qsky.game78le</string>
+   <string>com.qsky.game17game</string>
 				
    <key>bundle-version</key>
 				
@@ -71,7 +71,7 @@
 				
    <key>title</key>
 				
-   <string>xkqp</string>
+   <string>17game</string>
 			
 </dict>
 		
