--- a/final/17game.plist
+++ b/final/17game.plist
@@ -59,7 +59,7 @@
 				
    <key>bundle-identifier</key>
 				
-   <string>com.qsky.17game</string>
+   <string>com.qsky.game17</string>
 				
    <key>bundle-version</key>
 				
