--- a/final/17game.plist
+++ b/final/17game.plist
@@ -23,7 +23,7 @@
 					
    <key>url</key>
 					
-   <string>http://s1.17-game.com:884/DownLoad/phone/ios/17game.ipa</string>
+   <string>http://s8.17-game.com:884/DownLoad/phone/ios/game17.ipa</string>
 				
 </dict>
 				
@@ -35,7 +35,7 @@
 					
    <key>url</key>
 					
-   <string>http://s1.17-game.com:884/DownLoad/phone/ios/displayImage_17.png</string>
+   <string>http://s8.17-game.com:884/DownLoad/phone/ios/displayImage_17.png</string>
 				
 </dict>
 				
@@ -47,7 +47,7 @@
 					
    <key>url</key>
 					
-   <string>http://s1.17-game.com:884/DownLoad/phone/ios/displayImage_17game.png</string>
+   <string>http://s8.17-game.com:884/DownLoad/phone/ios/displayImage_17game.png</string>
 				
 </dict>
 			
@@ -71,7 +71,7 @@
 				
    <key>title</key>
 				
-   <string>17game</string>
+   <string>game17</string>
 			
 </dict>
 		
